# photo_mover

./: README.md  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
photo_mover/: __init__.py  __main__.py  csv_exporter.py  mover.py
tests/: test_cli.py  test_csv_exporter.py  test_mover.py
